--- a/src/index.html
+++ b/src/index.html
@@ -30,7 +30,7 @@
     </head>
     <body>
 
-        <button id="toggleRoof">Toggle Roof</button>
+        <!-- <button id="toggleRoof">Toggle Roof</button> -->
 
     </body>
 </html>
