--- a/src/index.html
+++ b/src/index.html
@@ -1,36 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <title>Ektogamat Threejs Starter Boilerplate</title>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
-        <meta name="description" content="A threejs example using threejs boilerplate - by Anderson Mancini">
 
-        <meta property="og:url" content="https://threejs-andy-boilerplate.vercel.app/">
-        <meta property="og:type" content="website">
-        <meta property="og:title" content="EKTOGAMAT THREEJS BOILERPLATE">
-        <meta property="og:description" content="A threejs example using threejs boilerplate - by Anderson Mancini">
-        <meta property="og:image" content="../static/cover.jpg">
+<head>
+    <title>Immersive house</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
+    <meta name="description" content="ThreeJs  and mapBox application Immersive house">
+    <link href="https://api.mapbox.com/mapbox-gl-js/v2.9.1/mapbox-gl.css" rel="stylesheet">
+    <script src="https://api.mapbox.com/mapbox-gl-js/v2.9.1/mapbox-gl.js"></script>
+    <script src="https://unpkg.com/three@0.126.0/build/three.min.js"></script>
+    <script src="https://unpkg.com/three@0.126.0/examples/js/loaders/GLTFLoader.js"></script>
+    <style>
+        #map {
+            position: absolute;
+            top: 0;
+            bottom: 0;
+            width: 100%;
+        }
+    </style>
+</head>
 
-        <meta name="twitter:card" content="summary_large_image">
-        <meta property="twitter:domain" content="https://threejs-andy-boilerplate.vercel.app/">
-        <meta property="twitter:url" content="https://threejs-andy-boilerplate.vercel.app/">
-        <meta name="twitter:title" content="EKTOGAMAT THREEJS BOILERPLATE">
-        <meta name="twitter:description" content="A threejs example using threejs boilerplate - by Anderson Mancini">
-        <meta name="twitter:image" content="../static/cover.jpg">
-      
-        <meta name="keywords" content="ThreeJS, HTML, CSS, JavaScript">
-        <meta name="author" content="Anderson Mancini">
-        <link rel="apple-touch-icon" sizes="180x180" href="../static/favicon/apple-touch-icon.png">
-        <link rel="icon" type="image/png" sizes="32x32" href="../static/favicon/favicon-32x32.png">
-        <link rel="icon" type="image/png" sizes="16x16" href="../static/favicon/favicon-16x16.png">
-        <link rel="manifest" href="../static/favicon/site.webmanifest">
-        <meta name="msapplication-TileColor" content="#ffffff">
-        <meta name="theme-color" content="#ffffff">
-    </head>
-    <body>
+<body>
+    <div id="map"></div>
+</body>
 
-        <!-- <button id="toggleRoof">Toggle Roof</button> -->
-
-    </body>
 </html>
