--- a/src/index.html
+++ b/src/index.html
@@ -6,11 +6,18 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
     <meta name="description" content="ThreeJs  and mapBox application Immersive house">
-    <link href="https://api.mapbox.com/mapbox-gl-js/v2.9.1/mapbox-gl.css" rel="stylesheet">
-    <script src="https://api.mapbox.com/mapbox-gl-js/v2.9.1/mapbox-gl.js"></script>
+    <!-- Import Mapbox GL JS  -->
+    <script src='https://api.tiles.mapbox.com/mapbox-gl-js/v2.9.1/mapbox-gl.js'></script>
+    <link href='https://api.tiles.mapbox.com/mapbox-gl-js/v2.9.1/mapbox-gl.css' rel='stylesheet' />
+    <!-- Import Assembly -->
+    <link href='https://api.mapbox.com/mapbox-assembly/v1.3.0/assembly.min.css' rel='stylesheet'>
+    <script src='https://api.mapbox.com/mapbox-assembly/v1.3.0/assembly.js'></script>
+    <!-- Import Turf -->
+    <script src="https://unpkg.com/@turf/turf@6/turf.min.js"></script>
+    <!-- Import ThreeJs -->
     <script src="https://unpkg.com/three@0.126.0/build/three.min.js"></script>
     <script src="https://unpkg.com/three@0.126.0/examples/js/loaders/GLTFLoader.js"></script>
-    <script src="https://unpkg.com/@turf/turf@6/turf.min.js"></script>
+
     <style>
         #map {
             position: absolute;
@@ -19,7 +26,7 @@
             width: 100%;
         }
 
-        .overlay {
+        /* .overlay {
             position: absolute;
             top: 10px;
             left: 10px;
@@ -39,15 +46,49 @@
 
         .overlay button:hover {
             background-color: #4ea0da;
-        }
+        } */
     </style>
 </head>
 
 <body>
     <div id="map"></div>
-    <div class="overlay">
-        <button id="replay">Replay</button>
+    <div class='absolute fl my24 mx24 py24 px24 bg-gray-faint round'>
+        <form id='params'>
+            <h4 class='txt-m txt-bold mb6'>Choose a travel mode:</h4>
+            <div class='mb12 mr12 toggle-group align-center'>
+                <label class='toggle-container'>
+                    <input name='profile' type='radio' value='walking' checked>
+                    <div class='toggle toggle--active-null toggle--null'>Walking</div>
+                </label>
+                <label class='toggle-container'>
+                    <input name='profile' type='radio' value='cycling'>
+                    <div class='toggle toggle--active-null toggle--null'>Cycling</div>
+                </label>
+                <label class='toggle-container'>
+                    <input name='profile' type='radio' value='driving'>
+                    <div class='toggle toggle--active-null toggle--null'>Driving</div>
+                </label>
+            </div>
+            <h4 class='txt-m txt-bold mb6'>Choose a maximum duration:</h4>
+            <div class='mb12 mr12 toggle-group align-center'>
+                <label class='toggle-container'>
+                    <input name='duration' type='radio' value='5' checked>
+                    <div class='toggle toggle--active-null toggle--null'>5 min</div>
+                </label>
+                <label class='toggle-container'>
+                    <input name='duration' type='radio' value='10'>
+                    <div class='toggle toggle--active-null toggle--null'>10 min</div>
+                </label>
+                <label class='toggle-container'>
+                    <input name='duration' type='radio' value='20'>
+                    <div class='toggle toggle--active-null toggle--null'>20 min</div>
+                </label>
+            </div>
+        </form>
     </div>
+    <!-- <div class="overlay">
+        <button id="replay">Replay</button>
+    </div> -->
 </body>
 
 </html>
