--- a/src/index.html
+++ b/src/index.html
@@ -14,9 +14,12 @@
     <script src='https://api.mapbox.com/mapbox-assembly/v1.3.0/assembly.js'></script>
     <!-- Import Turf -->
     <script src="https://unpkg.com/@turf/turf@6/turf.min.js"></script>
-    <!-- Import ThreeJs -->
+    <!-- Import ThreeJs
     <script src="https://unpkg.com/three@0.126.0/build/three.min.js"></script>
-    <script src="https://unpkg.com/three@0.126.0/examples/js/loaders/GLTFLoader.js"></script>
+    <script src="https://unpkg.com/three@0.126.0/examples/js/loaders/GLTFLoader.js"></script> -->
+    <!--   Import threebox -->
+    <script src="https://unpkg.com/threebox-plugin/dist/threebox.min.js" type="text/javascript"></script>
+    <link href="https://unpkg.com/threebox-plugin/dist/threebox.css" rel="stylesheet" />
 
     <style>
         #map {
